use lazy load for lite-youtube with smooth transition

--- a/index.html
+++ b/index.html
@@ -109,8 +109,12 @@
             <p class="gallery-heading">Галерея</p>
             <div class="gallery-container">
                 <p class="bigger-text">Наша история</p>
-                <lite-youtube videoid="K1ultgU_QXA" title="Белорусский кубинец: о любви и билете в Беларусь"
-                    style="background-image: url('img/info-placeholder.webp');">
+                <lite-youtube videoid="K1ultgU_QXA" title="Белорусский кубинец: о любви и билете в Беларусь">
+                    <div class="image-placeholder" aria-label="Белорусский кубинец: о любви и билете в Беларусь"
+                        role="img">
+                        <img src="img/info-placeholder.webp" alt="Белорусский кубинец: о любви и билете в Беларусь"
+                            loading="lazy">
+                    </div>
                     <a href="https://www.youtube.com/watch?v=K1ultgU_QXA" class="lyt-playbtn" title="Play Video">
                         <span class="lyt-visually-hidden">
                             Play Video: Белорусский кубинец: о любви и билете в Беларусь
@@ -119,8 +123,12 @@
                 </lite-youtube>
                 <p class="bigger-text">Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</p>
                 <lite-youtube videoid="4m6O2EXk2hE"
-                    title="Фестиваль латиноамериканской культуры в Минске 13-22 октября 2022г"
-                    style="background-image: url('img/festival-placeholder.webp');">
+                    title="Фестиваль латиноамериканской культуры в Минске 13-22 октября 2022г">
+                    <div class="image-placeholder" aria-label="Участие в фестивале латиноамериканской культуры в
+                    Минске" role="img">
+                        <img src="img/festival-placeholder.webp" alt="Участие в фестивале латиноамериканской культуры в
+                        Минске" loading="lazy">
+                    </div>
                     <a href="https://www.youtube.com/watch?v=4m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
                         <span class="lyt-visually-hidden">Play Video: Участие в фестивале латиноамериканской культуры в
                             Минске</span>
