optimize image transitioning

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
+                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                            class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
                         <h3>Грейсьер Мачадо Лопес</h3>
@@ -96,7 +97,8 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy">
+                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy"
+                            class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
@@ -113,7 +115,7 @@
                     <div class="image-placeholder" aria-label="Белорусский кубинец: о любви и билете в Беларусь"
                         role="img">
                         <img src="img/info-placeholder.webp" alt="Белорусский кубинец: о любви и билете в Беларусь"
-                            loading="lazy">
+                            loading="lazy" class="lazy-load">
                     </div>
                     <a href="https://www.youtube.com/watch?v=K1ultgU_QXA" class="lyt-playbtn" title="Play Video">
                         <span class="lyt-visually-hidden">
@@ -127,7 +129,7 @@
                     <div class="image-placeholder" aria-label="Участие в фестивале латиноамериканской культуры в
                     Минске" role="img">
                         <img src="img/festival-placeholder.webp" alt="Участие в фестивале латиноамериканской культуры в
-                        Минске" loading="lazy">
+                        Минске" loading="lazy" class="lazy-load">
                     </div>
                     <a href="https://www.youtube.com/watch?v=4m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
                         <span class="lyt-visually-hidden">Play Video: Участие в фестивале латиноамериканской культуры в
@@ -135,13 +137,13 @@
                     </a>
                 </lite-youtube>
                 <div class="image-placeholder" aria-label="Группа танцующих людей" role="img">
-                    <img src="img/group-dancing.webp" alt="Группа танцующих людей" loading="lazy">
+                    <img src="img/group-dancing.webp" alt="Группа танцующих людей" loading="lazy" class="lazy-load">
                 </div>
                 <div class="image-placeholder" aria-label="Танцующая пара" role="img">
-                    <img src="img/couple-dancing.webp" alt="Танцующая пара" loading="lazy">
+                    <img src="img/couple-dancing.webp" alt="Танцующая пара" loading="lazy" class="lazy-load">
                 </div>
                 <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                    <img src="img/man-dancing.webp" alt="Танцующий мужчина" loading="lazy">
+                    <img src="img/man-dancing.webp" alt="Танцующий мужчина" loading="lazy" class="lazy-load">
                 </div>
             </div>
         </section>
@@ -153,7 +155,7 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.webp" alt="Иконка Сальса" loading="lazy">
+                            <img src="img/salsa.webp" alt="Иконка Сальса" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
@@ -161,14 +163,14 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.webp" alt="Иконка Бачата" loading="lazy">
+                            <img src="img/bachata.webp" alt="Иконка Бачата" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latina.webp" alt="Иконка Латино Микс" loading="lazy">
+                            <img src="img/latina.webp" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
@@ -176,7 +178,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Реггетон" role="img">
-                            <img src="img/reggaeton.webp" alt="Иконка Реггетон" loading="lazy">
+                            <img src="img/reggaeton.webp" alt="Иконка Реггетон" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Реггетон</h3>
                         <p>Современный уличный танец с акцентом на движения бедрами. Выраженный ритм и яркая,
