override font for videos titles

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
             <p class="gallery-heading">Галерея</p>
             <div class="gallery-container">
-                <p class="bigger-text">Наша история</p>
+                <p class="bigger-text">От Кубы до Минска - наша история</p>
                 <lite-youtube videoid="K1ultgU_QXA" title="Белорусский кубинец: о любви и билете в Беларусь">
                     <div class="image-placeholder" aria-label="Белорусский кубинец: о любви и билете в Беларусь"
                         role="img">
