change map locations to be yandex app compatible

--- a/index.html
+++ b/index.html
@@ -506,14 +506,14 @@
                             loading="lazy">
                         <map name="map-directions">
                             <area target="_blank" rel="noopener" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
-                                href="https://yandex.by/maps/?rtext=~ул.%20Матусевича%2C%2035г&rtt=auto"
+                                href="https://yandex.by/maps/157/minsk/house/Zk4YcgJoSE0EQFtpfXVwd3xiZQ==/?ll=27.458183%2C53.916011&z=17"
                                 coords="142,85,385,184" shape="rect" data-original-coords="142,85,385,184">
                             <area target="_blank" rel="noopener" alt="пр-т Рокоссовского, 44к2"
                                 title="пр-т Рокоссовского, 44к2"
-                                href="https://yandex.by/maps/?rtext=~пр-т%20Рокоссовского%2C%2044к2&rtt=auto"
+                                href="https://yandex.by/maps/157/minsk/house/Zk4Ycw5gTEIAQFtpfXR3dnhnZg==/?ll=27.590577%2C53.867442&z=17"
                                 coords="1113,689,1385,797" shape="rect" data-original-coords="1113,689,1385,797">
                             <area target="_blank" rel="noopener" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
-                                href="https://yandex.by/maps/?rtext=~ул.%20Тимирязева%2C%209к10&rtt=auto"
+                                href="https://yandex.by/maps/157/minsk/house/Zk4YcwVpTUwFQFtpfXVxdnthYg==/?ll=27.529492%2C53.907726&z=17"
                                 coords="665,188,916,289" shape="rect" data-original-coords="665,188,916,289">
                         </map>
                     </div>
