redo the about us text

--- a/index.html
+++ b/index.html
@@ -73,9 +73,16 @@
 
         <section id="about" class="container-full" aria-labelledby="about-heading">
             <h2>О нас</h2>
-            <p class="bigger-text">Кубинская школа латиноамериканских танцев в центре Минска.
+            <!-- <p class="bigger-text">Кубинская школа латиноамериканских танцев в центре Минска.
                 Профессиональные танцоры из Кубы передают мастерство и знакомят с
-                культурой своей родины.</p>
+                культурой своей родины.</p> -->
+            <p class="bigger-text"><em>¡Hola!</em> Я Грей, профессиональный танцор из Кубы. Вместе с командой мы открыли
+                в Минске
+                школу <em>La Casa de Grei</em> (Дом Грея), где обучаем зажигательным танцам солнечной Кубы. Мы помогаем
+                ученикам
+                не просто освоить движения, а почувствовать ритм, зарядиться энергией и отличным настроением. Многие
+                говорят, что наши занятия помогли им по-новому взглянуть на жизнь. Приходите к нам, чтобы открыть для
+                себя мир ритма и движения!</p>
             <p class="teacher-heading">Преподаватели</p>
             <div class="teachers-container">
                 <article class="teacher">
