--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/logo.svg" type="image/svg+xml">
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="src/lite-yt-embed.css">
+    <!-- <link rel="stylesheet" href="src/lite-yt-embed.css"> -->
+    <link rel="preload" href="src/lite-yt-embed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="src/lite-yt-embed.css">
+    </noscript>
     <script src="src/lite-yt-embed.js" defer></script>
     <title>La Casa de Grei</title>
     <meta name="description"
