add entry to calendar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span class="contact-text-short">Связаться</span>
             <img class="contact-icon" src="img/contacts-display.svg" alt="">
             <div class="contact-menu-container">
-                <ul class="contact-menu" aria-modal="true" aria-label="Contact Options">
+                <ul class="contact-menu" aria-label="Contact Options">
                     <li><a href="https://t.me/machadolopezirina" target="_blank" rel="noopener"><img
                                 src="img/telegram.svg" alt="Telegram Icon">Телеграм</a></li>
                     <li><a href="viber://chat?number=%2B375293575258" target="_blank" rel="noopener"><img
@@ -395,6 +395,10 @@
                                 <span class="time">18:00</span>
                                 <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
                                         уровень)</em></span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name"><strong>парная бачата</strong></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
