improve meta content for seo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Casa de Grei</title>
+    <title>La Casa de Grei - Кубинская школа латиноамериканских танцев в Минске</title>
+
     <!-- Favicon -->
     <link rel="icon" href="img/logo.svg" type="image/svg+xml">
     <!-- Preloads -->
@@ -19,7 +20,7 @@
     <script src="script.js" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
-        content="Школа латиноамериканских танцев в Минске (Беларусь). Обучаем сальсе, бачате (соло и в парах), lady style, реггетону, афро, латина микс. Опытные кубинские преподаватели!">
+        content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучение сальсе, бачате, реггетону и латина микс от опытных кубинских инструкторов. Первое занятие бесплатно!">
     <meta name="keywords"
         content="латиноамериканские танцы, сальса, бачата, lady style, бачата соло, бачата в парах, кубинская сальса, касино, реггетон, афро, латина микс, школа танцев, Минск, Беларусь, кубинские преподаватели, латина, танцы">
 </head>
