--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>La Casa de Grei - Кубинская школа латиноамериканских танцев в Минске</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.ico" sizes="any" type="image/x-icon" />
-    <link rel="icon" href="img/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
     <link rel="preload" href="img/logo-content.svg" as="image">
