replace regaetton for kizomba

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <script src="script.js" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
-        content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучение сальсе, бачате, реггетону и латина микс от опытных кубинских инструкторов. Первое занятие бесплатно!">
+        content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
     <meta name="keywords"
-        content="латиноамериканские танцы, сальса, бачата, lady style, бачата соло, бачата в парах, кубинская сальса, касино, реггетон, афро, латина микс, школа танцев, Минск, Беларусь, кубинские преподаватели, латина, танцы">
+        content="сальса, кубинская сальса, касино, бачата, бачата соло, lady style, леди стайл, латина, latina, соло, кубинские преподаватели, кубинские танцы, кизомба, kizomba, школа танцев, La Casa de Grei, Дом Грея, танцы Минск, Минск, Беларусь">
 </head>
 
 <body>
@@ -190,20 +190,14 @@
                             ритмов.</p>
                     </div>
                     <div class="style-card">
-                        <div class="image-placeholder" aria-label="Иконка Реггетон" role="img">
-                            <img src="img/reggaeton.webp" alt="Иконка Реггетон" loading="lazy" class="lazy-load">
+                        <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
+                            <img src="img/kizomba.webp" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
                         </div>
-                        <h3>Реггетон</h3>
-                        <p>Современный уличный танец с акцентом на движения бедрами. Выраженный ритм и яркая,
-                            раскованная манера.</p>
+                        <h3>Кизомба</h3>
+                        <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
+                            музыкальности.</p>
                     </div>
-                    <!-- <div class="style-card">
-                        <div class="image-placeholder" aria-label="Иконка Зумба" role="img">
-                            <img src="img/zumba.jpeg" alt="Иконка Зумба" loading="lazy">
-                        </div>
-                        <h3>Зумба</h3>
-                        <p>Зажигательная смесь танца и фитнеса. Ритмичные движения под музыку разных стран мира.</p>
-                    </div> -->
+
                 </div>
             </div>
             <div class="spacer"></div>
@@ -328,7 +322,7 @@
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>бачата соло</strong><br><em> (начинающий)</em></span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -365,7 +359,7 @@
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>реггетон</strong><br><em>(начинающий)</em></span>
+                                <span class="class-name"><strong>кизомба</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -421,7 +415,7 @@
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>реггетон</strong><br><em>(начинающий)</em></span>
+                                <span class="class-name"><strong>кизомба</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -518,9 +512,9 @@
                 </div>
                 <h3>Три зала в Минске:</h3>
                 <ol class="contact-saloon">
+                    <li>ул. Матусевича, 35г (спортивный центр Sport Goat)</li>
                     <li>ул. Тимирязева, 9/10 (танцевальное пространство Эллада)</li>
                     <li>пр-т Рокоссовского, 44/2 (теннисный центр "Аква Минск")</li>
-                    <li>ул. Матусевича, 35г (спортивный центр Sport Goat)</li>
                 </ol>
                 <div class="contact-locations">
                     <div class="image-placeholder" aria-label="Расположение танцевальных студий">
@@ -530,13 +524,13 @@
                             <area target="_blank" rel="noopener" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
                                 href="https://yandex.by/maps/157/minsk/house/Zk4YcgJoSE0EQFtpfXVwd3xiZQ==/?ll=27.458183%2C53.916011&z=17"
                                 coords="142,85,385,184" shape="rect" data-original-coords="142,85,385,184">
+                            <area target="_blank" rel="noopener" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
+                                href="https://yandex.by/maps/157/minsk/house/Zk4YcwVpTUwFQFtpfXVxdnthYg==/?ll=27.529492%2C53.907726&z=17"
+                                coords="665,188,916,289" shape="rect" data-original-coords="665,188,916,289">
                             <area target="_blank" rel="noopener" alt="пр-т Рокоссовского, 44к2"
                                 title="пр-т Рокоссовского, 44к2"
                                 href="https://yandex.by/maps/157/minsk/house/Zk4Ycw5gTEIAQFtpfXR3dnhnZg==/?ll=27.590577%2C53.867442&z=17"
                                 coords="1113,689,1385,797" shape="rect" data-original-coords="1113,689,1385,797">
-                            <area target="_blank" rel="noopener" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
-                                href="https://yandex.by/maps/157/minsk/house/Zk4YcwVpTUwFQFtpfXVxdnthYg==/?ll=27.529492%2C53.907726&z=17"
-                                coords="665,188,916,289" shape="rect" data-original-coords="665,188,916,289">
                         </map>
                     </div>
                     <p><em>(Нажмите на местоположение на карте, чтобы проложить туда маршрут)</em></p>
